# Node-OpenMAX

./: .gitignore  .npmignore  BUFFERHEADERTYPE.cpp  BUFFERHEADERTYPE.h  COMPONENT.cpp  COMPONENT.h  ILCLIENT.cpp  LICENSE  OMX_consts.h  README.md  Sample.cpp  TUNNEL.cpp  TUNNEL.h  binding.gyp  index.js  index.ts  init.cpp  init.h  main.cpp  package.json  sleepAsync.cpp  sleepAsync.h  tsconfig.json  typings.json
examples/: AdvancedVideoDecoderRenderer.js  Perf.ts  PerfClient.ts  PerfDecode.ts  PerfGL.ts  PerfGLGrid.ts  SimpleDecoderEncoder.js  SimpleDecoderEncoder.ts  SimpleJPEGToVideo.js  SimpleVideoDecoderBuffer.js  SimpleVideoDecoderBuffer.ts  SimpleVideoDecoderRender.ts  SimpleVideoDecoderRenderBuffer.js  SimpleVideoDecoderRenderBuffer.ts  SimpleVideoDecoderRenderStream.js  SimpleVideoDecoderRenderTunnel.js  SimpleVideoDecoderRenderTunnel.ts  SimpleVideoDecoderStream.js  SimpleVideoToJPEG.js  VideoDecoderStream.js  class.js  index.js  runAll.sh  stream.js  test.js
headerGeneration/: generateComponents.js  package.json
lib/: AudioCapture.js  AudioDecode.js  AudioEncode.js  AudioLowpower.js  AudioMixer.js  AudioProcessor.js  AudioRender.js  AudioSplitter.js  Component.js  Component.ts  Definitions.ts  EglImage.ts  EglRender.js  GfxTexture.ts  Graphics.ts  ImageDecode.js  ImageEncode.js  ImageFx.js  ImageRead.js  ImageWrite.js  NullSink.js  OMX_STATETYPE.js  OMX_VIDEO_CODINGTYPE.js  OMX_VIDEO_PARAM_PORTFORMATTYPE.js  ReadMedia.js  TextScheduler.js  camera.js  (+17 more)
test/: CMakeLists.txt  Component.cpp  Component.h  VideoDecoder.cpp  VideoDecoder.h  VideoRender.h  main.cpp
(+197 files in other folders)
